Fix topic title alignment

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -152,6 +152,7 @@ article {
 
 article header {
     display: flex;
+    align-items: center;
 }
 
 article img {
